# Upgrad-OSP

./: .dockerignore  .env.example  .gitignore  ANALYSIS_FEATURE.md  ANALYSIS_IMPLEMENTATION_COMPLETE.md  ANALYSIS_SUMMARY.md  ANALYSIS_TECHNICAL.md  ANALYSIS_USER_GUIDE.md  ARCHITECTURE.md  AURORA_IMPLEMENTATION_GUIDE.md  COMPLETED_FEATURES.md  DELIVERY_SUMMARY.md  DOCUMENTATION_INDEX.md  Dockerfile  FEATURES.md  FIXES_APPLIED.md  FIX_DOCUMENT_SPACING.md  GAMMA_ENHANCED_FEATURES.md  GAMMA_MODULE_DOCS.md  GEOMETRIC_HERO_GUIDE.md  GLASS_BUTTONS_GUIDE.md  IMPLEMENTATION_CHECKLIST.md  INDEX.md  MARKDOWN_FORMATTING.md  MODULE_DESCRIPTIONS.md  PRESENTATION_BUILDER_MODULE.md  PROACTIVE_TIP_DESIGN.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  README_ANALYSIS_FEATURE.md  RUN.bat  SETUP_API.md  START_HERE.md  TEST_CHECKLIST.md  TUTORIAL_BOT_DOCS.md  UPLOAD_GUIDE.md  VISUAL_EXAMPLE.md  VISUAL_GUIDE.md  VISUAL_PREVIEW.md  (+7 more)
.claude/: settings.local.json
app/: base_model.py
app/core/: config.py
app/evaluator/: __init__.py  evaluator_agent.py  models.py  router.py
app/prompting/: __init__.py  agents.py  curriculum.py  models.py  module_descriptions.py  router.py  session_manager.py  submodule_descriptions.py  utils.py
app/workflow/: __init__.py  agents.py  ai_tools_database.py  models.py  router.py
backend/: app.py
cloudflare-certs/: .gitignore
docker/nginx/: Dockerfile  entrypoint-certbot.sh  nginx.conf
frontend/static/js/: dock.js  (+13 more)
scripts/: generate_all_samples.py  init_files.sh  restart_server.bat  test_apis.py  test_workflow_generation.py  test_workflow_units.py
(+37 files in other folders)
