[project]
name = "upgrad-osp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.120.4",
    "google-generativeai>=0.8.5",
    "jinja2>=3.1.6",
    "pydantic>=2.12.3",
    "pydantic-ai>=1.9.1",
    "pydantic-settings>=2.11.0",
    "pypdf2>=3.0.1",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.38.0",
    "werkzeug>=3.1.3",
]
